--- a/flutter_sound/android/build.gradle
+++ b/flutter_sound/android/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     // CAUTION: The following instruction is for developping and debugging the Flauto Engine
     // DO NOT INCLUDE THE FOLLOWING LINE IN A REAL APP !!!
     //implementation project(':flutter_sound_core')
-    implementation 'com.github.canardoux:flutter_sound_core:9.6.0'
+    // implementation 'com.github.canardoux:flutter_sound_core:9.6.0'
+    implementation 'com.github.ktleeSena:flutter_sound_core:wave_v0.0.1'
     // -------------------------------------------------------------------------------------
 
 }
